--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+#############
+# Liquibase #
+#############
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/dbchangelog.xml
+spring.liquibase.dropFirst=false
