--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/dbchangelog.xml
 spring.liquibase.dropFirst=false
+
+
+#####################
+# Static variables #
+#####################
+EMPTY_MESSAGE = is mandatory
