--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.liquibase.change-log=classpath:/db/changelog/dbchangelog.xml
 spring.liquibase.dropFirst=false
 
 
-#####################
-# Static variables #
-#####################
-EMPTY_MESSAGE = is mandatory
+#############################
+# Date format configuration #
+#############################
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
