--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,15 @@ spring.liquibase.dropFirst=false
 # Date format configuration #
 #############################
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+
+##################
+# Default domain #
+##################
+domain = localhost
+
+#####################
+# JWT configuration #
+#####################
+jwtSecret=2K/:bBN-4]7/9vEbM]>y]c~o7xIU8xD/2@:>,HYRroy$,S1'c&i.H$ntBz=@Lo&
+jwtExpirationMs= 86400000
