Add user registration and prepare to email verification functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,6 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/db/changelog/dbchangelog.xml
 spring.liquibase.dropFirst=false
 
-
 #############################
 # Date format configuration #
 #############################
@@ -30,10 +29,26 @@ spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
 ##################
 # Default domain #
 ##################
-domain = localhost
+domain=localhost
 
 #####################
 # JWT configuration #
 #####################
 jwtSecret=2K/:bBN-4]7/9vEbM]>y]c~o7xIU8xD/2@:>,HYRroy$,S1'c&i.H$ntBz=@Lo&
-jwtExpirationMs= 86400000
+jwtExpirationMs=86400000
+
+########################
+# Mail send box config #
+########################
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=453ab4753fde2b
+spring.mail.password=4d7a4b382baf81
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+######################
+# Default properties #
+######################
+defaultRole=USER
+createdByRegistration=REGISTRATION
