--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,7 @@ domain=localhost
 # JWT configuration #
 #####################
 jwtSecret=2K/:bBN-4]7/9vEbM]>y]c~o7xIU8xD/2@:>,HYRroy$,S1'c&i.H$ntBz=@Lo&
+#24h#
 jwtExpirationMs=86400000
 
 ########################
@@ -52,3 +53,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 ######################
 defaultRole=USER
 createdByRegistration=REGISTRATION
+defaultEmailAddress=liquorganizer@outlook.com
+confirmationLink=http://localhost:8080/api/user/confirmAccount/token=
